--- a/css/estilos.css
+++ b/css/estilos.css
@@ -155,6 +155,7 @@ a:visited{
     font-weight: bold;
     margin: 3rem 1rem 2rem 8rem;
     font-family: 'Open Sans Condensed', sans-serif;
+    color: black;
 }
 
 /* FORMS */
