--- a/css/estilos.css
+++ b/css/estilos.css
@@ -176,6 +176,17 @@ label, input, textarea{
     padding-bottom: 4rem;
 }
 
+/* NUMEROS DE EMERGENCIA */
+
+.numEmergencia{
+    display: grid;
+    grid-template-columns: repeat(5, 5fr);
+    margin: 1rem;
+    padding: 1rem;
+    text-align: center;
+    font-size: 2rem;
+}
+
 /* FOOTER */
 
 .pie{
@@ -272,6 +283,16 @@ footer, #link{
         font-size: 1.4rem;
         margin: 0rem;
     }
+    .numEmergencia{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(5, 1fr);
+        grid-row-gap: 1rem;
+        margin: 1rem;
+        padding: 1rem;
+        text-align: center;
+        font-size: 2rem;
+    }
 }
 
 @media only screen and (max-width:768px){
@@ -292,5 +313,15 @@ footer, #link{
     }
     .hijo1, .hijo2{
         font-size: 1.2rem;
+    }
+    .numEmergencia{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(5, 1fr);
+        grid-row-gap: 1rem;
+        margin: 1rem;
+        padding: 1rem;
+        text-align: center;
+        font-size: 2rem;
     }
 }
